Attempting to resolve box position issue, and 'bleedover' into other elements.

--- a/style.css
+++ b/style.css
@@ -5,51 +5,54 @@
   box-sizing: border-box;
 }
 
-h1 {
+/* h1 {
   font-size: 2em;
-}
+} */
 
-header {
-}
+/* header {
+  color: black;
+  background-color: blue;
+} */
 
-.navigationHeader {
-  background-color: tan;
+.navBar {
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.8);
+  color: black;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   padding: 1em;
-}
-
-footer {
-  background-color: tan;
+  width: 100%;
 }
 
 .bannerCapybara {
   background-image: url(Capybara1.jpg);
   background-color: white;
-  height: 300px;
+  height: 50vh;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-.banner {
-  padding: 20px;
-  background-color: wheat;
+.bannerAbout-us {
+}
+
+.bannerBook {
 }
 
 .bannerOverlays {
   position: absolute;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   background-color: rgba(255, 255, 255, 0.8);
   padding: 1rem;
-  opacity: 0.8;
-}
-
-.bannerH1 {
-  padding: 1em;
+  /* margin: 100px; */
+  text-align: center;
+  max-width: 50%;
+  left: 3rem;
+  top: 4rem;
 }
 
 .bannerButton {
@@ -59,8 +62,10 @@ footer {
   margin: 20px;
 }
 
-.bannerAbout-us {
+.bannerH1 {
+  padding: 1em;
 }
 
-.bannerBook {
+footer {
+  background-color: tan;
 }
